Fixed scrolling of colour addtributes and added more VDU codes (Roland)
Change-Id: I8f5350cc1c82b67a5a78f7c32a4cdb378b33ad7c

--- a/OSWRCH80.cfg
+++ b/OSWRCH80.cfg
@@ -1,9 +1,11 @@
 MEMORY
 {
+   SEG0:  start = $6FEA, size =   $16, fill = no;
    SEG1:  start = $7000, size = $1000, fill = no;
 }
 
 SEGMENTS
 {
+   HEADER:  load = SEG0, type = ro;
    CODE:    load = SEG1, type = ro;
 }
